# PaperClaw

./: .gitignore  LICENSE  README.md  dev.sh  pyproject.toml  settings.example.yaml
.github/workflows/: desktop.yml
docs/: environment-guide.md  web-guide.md
docs/examples/: README.md
docs/i18n/: README.ar.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.zh-CN.md
docs/plans/: 2026-06-27-001-feat-codex-subscription-provider-plan.md  2026-06-28-001-fix-codex-subscription-auth-plan.md
frontend/: electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.web.config.ts
frontend/src/: App.module.css  App.tsx  api.ts
paperclaw/: __init__.py  __main__.py  cli.py  client.py  codebase.py  codex_cli.py  config.py  domains.py  experiments.py  hardware.py  ideas.py  images.py  iterative_pipeline.py  jobs.py  literature.py  llm.py  paper.py  paper_review.py  references.py  research_pipeline.py  service.py  writing_styles.py
paperclaw/agents/: __init__.py  cli_agent.py  coding_agent.py  deep_chat.py
paperclaw/prompts/: __init__.py  domains.py  hardware.py  (+3 more)
tests/: conftest.py  test_auto.py  test_cli.py  test_cli_agent.py  test_codebase.py  test_codex_cli.py  test_deep_chat.py  test_hardware.py  test_hypothesis.py  test_images.py  test_iterative_pipeline.py  test_jobs.py  test_paper_review.py  test_references.py  test_research_pipeline.py  test_server.py  test_tools.py  test_web_search.py  test_workspace.py  test_writing_styles.py
(+99 files in other folders)
